<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="app_name">Child Apps Tracking</string>
    <string name="running_apps">Recent Apps</string>

    <string name="close">Close</string>

    <string name="detail">Details</string>
    <string name="duration">Duration</string>

    <string name="enable_apps_monitor">Enable apps monitor</string>
    <string name="enable_apps_monitoring">Apps monitoring</string>

    <string name="feedback">feedback: feedback@optiquall.com</string>

    <string name="grant_success">Grand permission successfully</string>

    <string name="hide_system_apps">Hide system Apps</string>
    <string name="hide_uninstall_apps">Hide uninstalled Apps</string>
    <string name="notification_channel_id">default</string>
    <string name="ignore">Ignore this app</string>
    <string name="ignore_hint">Apps in this list will be hidden</string>
    <string name="ignore_list">Ignore list</string>
    <string name="ignore_success">Move to ignore list successfully</string>
    <string name="more">More detail</string>
    <string name="app_info">App info</string>
    <string name="notification_title">AppTimeline running</string>
    <string name="notification_message">monitoring your app usage</string>
    <string name="not_support">You device not support monitoring</string>
    <string name="open">Open</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="settings_function">Functions</string>
    <string name="settings_more">More</string>
    <string name="share">Like and share</string>
    <string name="share_desc">Hey check out this app, it\'s so cool, it can help checkout every app\'s time your spend on: %1$s%2$s</string>
    <string name="slogan">Monitor Apps usage</string>
    <string name="sort">Sort By</string>

    <string name="toast_permission">Please find \"Child Apps Tracking\" and grant the permission</string>
    <string name="times">%1$s · %2$d times</string>
    <string name="times_only">times</string>
    <string name="total">%1$s</string>

    <string name="version">v %1$s</string>

    <string name="wifi_data">WiFi:%1$s · Mobile:%2$s</string>
    <string name="parentLable">Are you parent?<u> click here.</u></string>
    <string name="sign_up">New User | <u>Sign Up here</u></string>
    <string name="sign_up_parent">Not registered ? <u>Sign Up here</u></string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>

    <string name="logout">Logout</string>
    <string name="child_sign_in">Child Sign In</string>
    <string name="send_app_usage_request">Send app usage request</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="log_out">Log out</string>
</resources>
