<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/monte"
        android:gravity="center"
        android:text="Sign Up"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="20dp"
        app:fontFamily="@font/monte" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/monte"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/black"
                app:fontFamily="@font/monte" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/monte"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@android:color/black"
                app:fontFamily="@font/monte" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/monte"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/black"
                app:fontFamily="@font/monte" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/monte"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/black"
                app:fontFamily="@font/monte" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_buttton"
            android:fontFamily="@font/monte"
            android:text="SIGN UP"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:fontFamily="@font/monte" />


        <Button
            android:id="@+id/btnRegisterLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonRegister"
            android:layout_gravity="end"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:fontFamily="@font/monte"
            android:text="@string/already_having_account"
            android:textAllCaps="false"
            app:fontFamily="@font/monte" />

    </LinearLayout>
</LinearLayout>